--- a/src/TrialChoice.css
+++ b/src/TrialChoice.css
@@ -188,7 +188,7 @@
 }
 
 .arrow-svg {
-  transform: rotate(25deg);
+  transform: rotate(43deg);
 }
 
 .view-reading-button {
@@ -282,5 +282,6 @@
   .arrow-svg {
     width: 90px;
     height: 60px;
+    margin-top: 73px;
   }
 }
