--- a/src/TrialChoice.css
+++ b/src/TrialChoice.css
@@ -163,7 +163,6 @@
 }
 
 .help-text-container {
-  position: relative;
   margin-bottom: 30px;
   display: flex;
   flex-direction: column;
@@ -181,14 +180,17 @@
 }
 
 .curved-arrow {
-  position: absolute;
-  top: 100px;
-  right: 15px;
-  z-index: 10;
+  position: relative;
+  margin-top: 10px;
+  z-index: 0;
+  pointer-events: none;
 }
 
 .arrow-svg {
   transform: rotate(43deg);
+  width: 90px;
+  height: 60px;
+  margin: 0 auto;
 }
 
 .view-reading-button {
@@ -231,34 +233,29 @@
   .content-wrapper {
     padding: 0 20px;
   }
-  
+
   .title {
     font-size: 24px;
   }
-  
+
   .price-buttons {
     gap: 8px;
   }
-  
+
   .price-button {
     width: 100px;
     height: 100px;
     font-size: 16px;
   }
-  
+
   .view-reading-button {
     padding: 15px 30px;
     font-size: 16px;
   }
-  
-  .curved-arrow {
-    top: -120px;
-    right: 50px;
-  }
-  
+
   .arrow-svg {
-    width: 100px;
-    height: 70px;
+    width: 80px;
+    height: 50px;
   }
 }
 
@@ -268,20 +265,14 @@
     height: 80px;
     font-size: 14px;
   }
-  
+
   .help-text {
     font-size: 13px;
     max-width: 250px;
   }
-  
-  .curved-arrow {
-    top: -100px;
-    right: 40px;
-  }
-  
+
   .arrow-svg {
-    width: 90px;
-    height: 60px;
-    margin-top: 73px;
+    width: 70px;
+    height: 45px;
   }
 }
